# GenAI-chatbot

./: .flake8  .gitignore  LLM_API_Test.py  Makefile  README.md  pinecone_generate_embeddings.py  pinecone_pre_embedded.py  pyproject.toml  query.py  requirements.txt  text.txt
